fixed button on mobile

--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -41,9 +41,9 @@
     transition: 0.35s;
 }
 
-@media screen and (min-width: 350px) and (max-width: 700px) {
+@media screen and (min-width: 0px) and (max-width: 700px) {
     .trial {
-        width: 150px;
+        width: 100px;
         font-size: 1rem;
     }
 
