--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -57,7 +57,7 @@
     }
 }
 
-@media screen and (min-width: 350px) and (max-width: 700px) {
+@media screen and (min-width: 0px) and (max-width: 700px) {
     .card {
         width: 200px;
         height: 300px;
