--- a/src/sections/About.css
+++ b/src/sections/About.css
@@ -117,7 +117,7 @@ h2 {
     }
 }
 
-@media screen and (min-width: 350px) and (max-width: 700px) {
+@media screen and (min-width: 0px) and (max-width: 700px) {
     .join-primary {
         font-size: 2rem;
     }
