--- a/src/sections/Classes.css
+++ b/src/sections/Classes.css
@@ -76,7 +76,7 @@
     }
 }
 
-@media screen and (min-width: 350px) and (max-width: 700px) {
+@media screen and (min-width: 0px) and (max-width: 700px) {
     .title {
         width: 80%;
         font-size: 2rem;
