--- a/src/sections/Contact.css
+++ b/src/sections/Contact.css
@@ -52,7 +52,7 @@ h1 {
 }
 }
 
-@media screen and (min-width: 350px) and (max-width: 700px) {
+@media screen and (min-width: 0px) and (max-width: 700px) {
     .headers {
         width: 90%;
     }
