--- a/src/sections/Main.css
+++ b/src/sections/Main.css
@@ -50,7 +50,7 @@
     }
 }
 
-@media screen and (min-width: 350px) and (max-width: 700px) {
+@media screen and (min-width: 0px) and (max-width: 700px) {
     .main-section h2 {
         font-size: 1.5rem;
     }
